# aigis-zero

./: .dev.env.example  .env.example  .gitignore  .testingignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EDR_IMPLEMENTATION_GUIDE.md  ISSUES.md  LICENSE  README.md  TIMELINE.md  agent.toml  run-docker-agent.sh  scheduled_queries.toml  typos.toml
.github/: CI_CACHING_STRATEGY.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: agent-release.yml  autofix.yml  ci.yml  kafka-pipeline.yml  update-deps.yml
.sqlx/: query-02f0784a2aefc0e48b6a78a86aa0575a0e98e87c85e72e5da49d79827a0d7997.json  query-4d3c9d60a0f85348d286e4f41ce28b0a313b6f164c48480f1ec9cf00a8d8c7bb.json  query-7a42f879c809ab1bea8dda4b06aa1fce6a105ad460025ccb4b0fa10949b6b486.json  query-7df2e8394e5f55c0217192c061668f00fd00774b2b86f414a6bfb04f900b21a8.json  query-be24aaa28047630cd45f9701f9e74fac4438460404967d1d348532cad39259ae.json  query-e5760d97933de085f8e2038f937b8924cf27b99f433d3f625e5deb6cced11ee6.json
agent/: .env.example  Dockerfile  INSTALLATION_GUIDE.md  agent-dev-guide.md  agent.toml  install.sh  osquery-edr-linux-guide.md  timeline.md  todo.md  uninstall.sh
agent/.cargo/: config.toml
agent/crates/agent-bin/: Cargo.toml
agent/crates/agent-bin/src/: main.rs
agent/crates/agent-core/: Cargo.toml  timeline.md
agent/crates/agent-core/src/: command_handler.rs  config.rs  lib.rs  orchestrator.rs  preflight.rs
agent/crates/agent-tracing/: Cargo.toml
agent/crates/agent-tracing/src/: lib.rs
agent/crates/ebpf-collector/: Cargo.toml  timeline.md
agent/crates/ebpf-collector/src/: lib.rs
agent/crates/event-buffer/: Cargo.toml  timeline.md
agent/crates/event-buffer/src/: lib.rs
agent/crates/event-buffer/tests/: event_buffer_test.rs
agent/crates/fleet-client/: Cargo.toml  timeline.md
agent/crates/fleet-client/src/: connection.rs  enrollment.rs  heartbeat.rs  lib.rs  stream.rs  types.rs
agent/crates/isolation/: Cargo.toml  timeline.md
agent/crates/isolation/src/: lib.rs
agent/crates/osquery-client/: Cargo.toml  timeline.md
agent/crates/osquery-client/src/: client.rs  diff.rs  lib.rs  scheduler.rs  types.rs
agent/limits/: 99-aigis-zero.conf
agent/osquery/: osquery.conf  osquery.flags
agent/sysctl/: 60-aigis-zero.conf
agent/systemd/: aigis-zero.service
agent/systemd/osqueryd.service.d/: aigis-zero.conf
agent/tests/: agent_integration.rs
agent/tools/mock-fleet-server/: Cargo.toml  build.rs
agent/tools/mock-fleet-server/src/: main.rs
api-backend/: Cargo.toml  Dockerfile  timeline.md
api-backend/src/: main.rs
fleet-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  timeline.md
fleet-server/crates/fleet-manager/: Cargo.toml
fleet-server/crates/fleet-manager/src/: lib.rs  ports.rs
fleet-server/crates/fleet-server-bin/: Cargo.toml
fleet-server/crates/fleet-server-bin/src/: main.rs  ports.rs  settings.rs
fleet-server/crates/fleet-tracing/: Cargo.toml
fleet-server/crates/fleet-tracing/src/: config.rs  init.rs  lib.rs
fleet-server/crates/grpc-listener/: Cargo.toml  build.rs
fleet-server/crates/grpc-listener/src/: auth.rs  config.rs  error.rs  lib.rs  server.rs  service.rs
fleet-server/crates/health-tracker/: Cargo.toml
fleet-server/crates/health-tracker/src/: error.rs  lib.rs  store.rs  tracker.rs
fleet-server/crates/kafka-handler/: Cargo.toml
fleet-server/crates/kafka-handler/src/: lib.rs
fleet-server/crates/node-enrollment/: Cargo.toml
fleet-server/crates/node-enrollment/src/: enroller.rs  error.rs  lib.rs  store.rs  token.rs
fleet-server/crates/postgres-interface/: Cargo.toml
fleet-server/crates/postgres-interface/src/: error.rs  health_store.rs  lib.rs  node_store.rs  pool.rs
fleet-server/migrations/: 001_create_nodes.sql  20260601000001_create_nodes.sql  20260601000002_create_enrollment_events.sql  20260601000003_create_node_health.sql  seed.sql
fleet-server/src/: main.rs
frontend/: Dockerfile  index.html  timeline.md
frontend/public/: site.webmanifest
frontend/src/: App.css  App.tsx  AsciiBackground.css  AsciiBackground.tsx  index.css
infra/: README.md  docker-compose.dev.yml  docker-compose.kafka-cluster.yml  docker-compose.yml  timeline.md
infra/k8s/: keda-scaler.yml
infra/scripts/: create-topics.sh
kafka-pipeline/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  guide.md  timeline.md
kafka-pipeline/src/: consumer.rs  event_router.rs  health.rs  lib.rs  main.rs  metrics.rs
kafka-pipeline/tests/: integration_test.rs
rule-engine/: Cargo.toml  Dockerfile  timeline.md
rule-engine/src/: main.rs
sdk/: Cargo.toml  build.rs  timeline.md
sdk/proto/: agent.proto  events.proto  fleet.proto
sdk/src/: codec.rs  lib.rs
sdk/src/models/: enrollment.rs  envelope.rs  event.rs  heartbeat.rs  mod.rs
tests/: TEST_PLAN.md
