[package]
name = "edr-kafka-pipeline"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "edr-kafka-pipeline"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
sqlx = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow.workspace = true
thiserror.workspace = true
edr-sdk = { version = "0.1.0", path = "../sdk" }
rdkafka = { version = "0.39.0", features = ["cmake-build"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
bytes.workspace = true
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
async-trait.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures-util = "0.3.32"
