[package]
name = "edr-sdk"
description = "Shared types, proto definitions, and client helpers for the EDR system"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
