[package]
name = "agent-bin"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "edr-agent"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
sd-notify = "0.4"
libc = "0.2"
toml = { workspace = true }
