[package]
name = "agent-bin"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[[bin]]
name = "edr-agent"
path = "src/main.rs"

[dependencies]
agent-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
sd-notify = "0.4"
libc = "0.2"
toml = { workspace = true }
hostname = "0.4"
fleet-client = { workspace = true }
event-buffer = { workspace = true }
osquery-client = { workspace = true }
edr-sdk = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
agent-tracing = { workspace = true }
