[package]
name = "agent-core"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
prost = { workspace = true }
agent-tracing = { workspace = true }
fleet-client = { workspace = true }
osquery-client = { workspace = true }
event-buffer = { workspace = true }
hostname = "0.4"

