[package]
name = "event-buffer"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
sled = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
edr-sdk = { workspace = true }
