[package]
name = "fleet-client"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
edr-sdk = { workspace = true }
http = { workspace = true }
