[package]
name = "osquery-client"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
prost = { workspace = true }
thrift = "0.17"
rusqlite = { workspace = true }
