[package]
name = "mock-fleet-server"
version = "0.1.0"
edition = "2024"

[workspace]

[[bin]]
name = "mock-fleet-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full", "macros"] }
tonic = "0.12"
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
