[package]
name = "grpc-listener"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
tonic          = { workspace = true }
tonic-prost    = { workspace = true }
prost          = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
tokio-util     = { workspace = true }
tracing        = { workspace = true }
thiserror      = { workspace = true }
jsonwebtoken   = { workspace = true }
anyhow         = { workspace = true }
async-trait    = { workspace = true }
fleet-manager  = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
