[package]
name = "health-tracker"
edition.workspace    = true
version.workspace    = true
rust-version.workspace = true

[dependencies]
async-trait.workspace   = true
fleet-manager.workspace = true
thiserror.workspace     = true
tokio.workspace         = true
tracing.workspace       = true
chrono.workspace        = true
tonic.workspace         = true
