[package]
name = "postgres-interface"
edition.workspace    = true
version.workspace    = true
rust-version.workspace = true

[dependencies]
sqlx          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
thiserror     = { workspace = true }
uuid          = { workspace = true }
chrono        = { workspace = true }
async-trait   = { workspace = true }
node-enrollment = { path = "../node-enrollment" }
health-tracker  = { path = "../health-tracker" }
